# amanzon

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  LICENSE.md  README.md  TASKS.md
app/: .env.example  manage.py  pyproject.toml  requirements.txt
app/amanzon/: asgi.py  settings.py  urls.py  wsgi.py
app/static/: robots.txt
app/static/css/: style.css
app/store/: admin.py  context_processors.py  exceptions.py  forms.py  middleware.py  models.py  services.py  storage.py  urls.py
app/store/management/commands/: __init__.py  create_superuser.py  migrate_media.py  seed_products.py
app/store/migrations/: 0001_initial.py  0002_add_coupon_usage.py  0003_user_verification_token.py  0004_add_database_indexes.py  0005_add_verification_token_expiry.py  0006_add_address_model.py  0007_make_product_image_optional.py
app/store/templatetags/: store_tags.py
app/store/tests/: test_email_settings.py  test_general.py  test_orders.py  test_security.py  test_session.py  test_verification.py
app/store/views/: auth.py  cart.py  main.py  orders.py  shop.py
app/templates/: 404.html  500.html  base.html
app/templates/auth/: login.html  password_reset.html  password_reset_confirm.html  register.html  verification_sent.html
app/templates/store/: _product_card.html  address_form.html  cart.html  checkout.html  contact.html  index.html  order_detail.html  orders.html  product_detail.html  profile.html  shop.html  wishlist.html
