[project]
name = "amanzon"
version = "1.3.1"
description = "A modern Django e-commerce application"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=3.1.0",
    "django>=5.2.9",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "razorpay>=2.0.0",
    "supabase>=2.27.1",
    "whitenoise>=6.11.0",
]
